# RuBot2020

./: .gitignore  .gitmodules  Readme.md  build_team_system.bash  run_team_system.bash  team_config.yaml
src/rubot/: CMakeLists.txt  package.xml
src/rubot/src/: kinematics.cpp  rubot.cpp
